--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc -p tsconfig.build.json",
-    "test:unit": "rm -rf coverage/unit; jest --rootDir . --bail --colors --verbose --config './tests/unit/jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
+    "test:unit": "rm -rf coverage; jest --rootDir . --bail --colors --verbose --config './tests/unit/jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
     "test:flows": "jest --rootDir . --bail --colors --verbose --config './tests/flows/jest.config.json' --testMatch '**/tests/flows/**/*.spec.ts' --forceExit",
     "test:limits": "cat ./tests/limits/warning.txt; jest --rootDir . --bail --colors --verbose --config './tests/limits/jest.config.json' --testMatch '**/tests/limits/**/*.spec.ts' --forceExit",
-    "test:create_badges": "rm -rf img; mkdir img; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img",
     "test:all": "npm run test:unit && npm run test:flows",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "prepare": "husky install"
@@ -39,7 +38,6 @@
     "eslint-plugin-sonarjs": "0.23.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "jest-coverage-badges": "1.1.2",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "typescript": "5.3.3"
